CDN and background inherit dark mode fixes

--- a/src/components/AlbumSelectors/AlbumSelector.scss
+++ b/src/components/AlbumSelectors/AlbumSelector.scss
@@ -3,7 +3,7 @@
     border-bottom: 1px solid black;
 
     &__title {
-        background-color: inherit;
+        /* background-color: inherit; */
     }
 
     &--last {
