--- a/src/components/SoundDesign/SoundDesign.scss
+++ b/src/components/SoundDesign/SoundDesign.scss
@@ -209,7 +209,7 @@
 
     &:hover {
         opacity: 0.5;
-        background-image: url("src/assets/images/icons/NewAmericanLeft.jpeg");
+        background-image: url("https://res.cloudinary.com/dfbuwtl5q/image/upload/v1704241063/NewAmericanLeft_pds3fz.jpg");
         background-size: contain;
 
         &::before {
